# api/hospital-wl.openapi.yaml
@@ -20,6 +20,23 @@ tags:
   description: Hospital department management
 
 paths:
+  "/medbed/departments":
+    get:
+      tags:
+        - departments
+      summary: Returns list of all departments
+      operationId: getDepartments
+      description: Use this method to get list of all hospital departments in the system
+      responses:
+        "200":
+          description: List of departments
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Department"
+
   "/medbed/department":
     post:
       tags:
